Combined the TwoScaleCoeffs and HgCoeffs modules into TwoScale.  Added an iterator to FTree.  Other cleanups.
git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@11371 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/test/studies/madness/dinan/mad_chapel/Makefile
+++ b/test/studies/madness/dinan/mad_chapel/Makefile
@@ -8,11 +8,10 @@ CFLAGS = --instantiate-max 512 -g --savec=$(GENC) --short-names --print-passes
 SOURCES= Fn1d.chpl       \
          FTree.chpl      \
          Function1d.chpl \
-         HgCoeffs.chpl   \
          MadFn1d.chpl    \
          Quadrature.chpl \
          Tensor.chpl     \
-         TwoScaleCoeffs.chpl
+         TwoScale.chpl
 
 all: 1d
 
