--- a/compiler/passes/Makefile.share
+++ b/compiler/passes/Makefile.share
@@ -2,6 +2,7 @@ PASSES_SRCS = \
         buildDefaultFunctions.cpp \
         cleanup.cpp \
 	codegen.cpp \
+        complex2record.cpp \
         copyCollect.cpp \
         cullOverReferences.cpp \
 	filesToAST.cpp \
