Implemented GAXPY, function addition, and function subtraction.  Pulled out the diff test into its own file and added a separate gaxpy test.  Only one function left to go: multiplication!!
Gaxpy is an important function because it is performed in the multi-wavelet
basis (eg, on the compressed tree) whereas differentiation is performed in the
scaling (reconstructed) basis.


git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@11448 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/test/studies/madness/dinan/mad_chapel/Makefile
+++ b/test/studies/madness/dinan/mad_chapel/Makefile
@@ -13,11 +13,18 @@ SOURCES= Fn1d.chpl       \
          Tensor.chpl     \
          TwoScale.chpl
 
-all: 1d
+TARGETS= test_diff       \
+         test_gaxpy
+
+all: $(TARGETS)
 
 
-1d: $(SOURCES)
-	$(CC) $(CFLAGS) --main-module Function1d -o $@ $+
+test_diff: $(SOURCES) test_diff.chpl
+	$(CC) $(CFLAGS) --main-module $@ -o $@ $+
+
+
+test_gaxpy: $(SOURCES) test_gaxpy.chpl
+	$(CC) $(CFLAGS) --main-module $@ -o $@ $+
 
 
 .PHONY: distrib
@@ -30,5 +37,5 @@ distrib: clean
 
 .PHONY: clean
 clean:
-	rm -f 1d
+	rm -f $(TARGETS)
 	rm -rf $(GENC)
