Updates from today's meeting.  Changed many vars to consts, removes some unused function arguments, and changed FTree.these() to return an array of coeffs rather than an index 2-tuple.
git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@11456 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/test/studies/madness/dinan/mad_chapel/Makefile
+++ b/test/studies/madness/dinan/mad_chapel/Makefile
@@ -35,6 +35,7 @@ ps:
 	    -c ":hardcopy > $(PSDIR)/$$out.ps" -c ":q" $$file;      \
 	done
 	@echo Postscript output is in $(PSDIR)
+	@echo To 2-up any of the .ps files, do: "psnup -2 -pletter in.ps out.ps"
 
 
 .PHONY: distrib
