Renamed Function1d.chpl to MRA.chpl.  Doing a "use MRA" should now pull in all of the MultiResolution Analysis machinery needed to write a Madness program. This is a case where having transitivity in module uses is helpful.  Numerical results from multiplication are looking good.
git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@11470 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/test/studies/madness/dinan/mad_chapel/Makefile
+++ b/test/studies/madness/dinan/mad_chapel/Makefile
@@ -7,7 +7,7 @@ CFLAGS = --instantiate-max 512 -g --savec=$(GENC) --short-names --print-passes
 
 SOURCES= AnalyticFcn.chpl  \
          FTree.chpl        \
-         Function1d.chpl   \
+         MRA.chpl          \
          Quadrature.chpl   \
          Tensor.chpl       \
          TwoScale.chpl
