Fixed c_intStr() prototype, updated sources list in Makefile to include StringConvert.c (hooray!).
I finished comparing the output from test_likepy and Robert's 1d Python test
and the results are the same.


git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@11507 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/test/studies/madness/dinan/mad_chapel/Makefile
+++ b/test/studies/madness/dinan/mad_chapel/Makefile
@@ -1,7 +1,8 @@
 GENC   = gen_c
 
 CC     = chpl
-CFLAGS = StringConvert.c --instantiate-max 512 -g --savec=$(GENC) --short-names --print-passes
+CFLAGS = --instantiate-max 512 --print-passes
+#CFLAGS += -g --savec=$(GENC) --short-names
 #CFLAGS += --ccflags "-Wall"
 #CFLAGS += --no-cg-cpp-lines
 
@@ -11,7 +12,8 @@ SOURCES= AnalyticFcn.chpl  \
          Quadrature.chpl   \
          Tensor.chpl       \
          TwoScale.chpl     \
-         StringConvert.chpl
+         StringConvert.chpl\
+         StringConvert.c
 
 TARGETS= test_diff       \
          test_gaxpy      \
