--- a/make/Makefile.xt-cnl
+++ b/make/Makefile.xt-cnl
@@ -23,8 +23,9 @@ DEBUG_CFLAGS = -g
 OPT_CFLAGS = 
 
 CFLAGS = -target=linux
+LFLAGS = -target=linux
 
 COMP_CFLAGS = $(CFLAGS)
 RUNTIME_CFLAGS = $(CFLAGS) -DNO_BYTES_PER_LOCALE
 GEN_CFLAGS = $(CFLAGS)
-
+GEN_LFLAGS = $(LFLAGS)
