Fixed a Makefile bug that I'd run into a few weeks ago, but then couldn't reproduce which Samuel also just ran into. When 'make' was done before 'make depend' in the runtime directory and CHPLDEVTMP was set, the $platform subdirectory would be created as a directory rather than a symbolic link by the make step, but then attempted to be set up as a symbolic link by the make depend step due to the lack of a timestamp. Fixed both of these problems (directory instead of symbolic link and updated timestamp) by making the $platform subdirectory a prerequisite of the deeper $platform/comm/threads directory used by the runtime.
Also, @'d out some commands that just clutter the build process
which I think I'd uncommented while debugging at some earlier
point.


git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@11550 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/make/Makefile.base
+++ b/make/Makefile.base
@@ -72,9 +72,9 @@ $(PLATFORM_DIR):
 else
 $(PLATFORM_DIR):
 	@echo linking $(CHPL_MAKE_PLATFORM) subdirectory to store platform-specific files
-	mkdir -p $(CHPLDEVTMP)/chapel-$(USER)$(CURDIR)/$(CHPL_MAKE_PLATFORM)
-	rm -f $(CHPL_MAKE_PLATFORM)
-	ln -s $(CHPLDEVTMP)/chapel-$(USER)$(CURDIR)/$(CHPL_MAKE_PLATFORM) .
+	@mkdir -p $(CHPLDEVTMP)/chapel-$(USER)$(CURDIR)/$(CHPL_MAKE_PLATFORM)
+	@rm -f $(CHPL_MAKE_PLATFORM)
+	@ln -s $(CHPLDEVTMP)/chapel-$(USER)$(CURDIR)/$(CHPL_MAKE_PLATFORM) .
 	@-touch $(PLATFORM_DIR)
 endif
 
