Adding another test: showboxes.  This test program will print out the level and index of every box that has coefficients.  Using this data you can draw a picture of the FTree.
git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@11556 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/test/studies/madness/dinan/mad_chapel/Makefile
+++ b/test/studies/madness/dinan/mad_chapel/Makefile
@@ -17,7 +17,8 @@ SOURCES= AnalyticFcn.chpl  \
 TARGETS= test_diff       \
          test_gaxpy      \
          test_mul        \
-         test_likepy
+         test_likepy     \
+         test_showboxes
 
 all: $(TARGETS)
 
@@ -35,6 +36,10 @@ test_mul: $(SOURCES) test_mul.chpl MadAnalytics.chpl
 
 
 test_likepy: $(SOURCES) test_likepy.chpl MadAnalytics.chpl
+	$(CC) $(CFLAGS) --main-module $@ -o $@ $+
+
+
+test_showboxes: $(SOURCES) test_showboxes.chpl MadAnalytics.chpl
 	$(CC) $(CFLAGS) --main-module $@ -o $@ $+
 
 
