Stop defining NO_BYTES_PER_LOCALE for xt-cnl target, it supports those calls.
Use the environment variables CHPL_CROSS_PLATFORM and PE_ENV to get a more
descriptive machine type for the email subject line from the nightly script.
For an XT cross compile from linux64 using the gnu compiler, the machine type
will look like (linux64/xt-cnl/gnu).

Add .goods for baffin specific output.


git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@11558 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/make/Makefile.xt-cnl
+++ b/make/Makefile.xt-cnl
@@ -26,6 +26,6 @@ CFLAGS = -target=linux
 LFLAGS = -target=linux
 
 COMP_CFLAGS = $(CFLAGS)
-RUNTIME_CFLAGS = $(CFLAGS) -DNO_BYTES_PER_LOCALE
+RUNTIME_CFLAGS = $(CFLAGS)
 GEN_CFLAGS = $(CFLAGS)
 GEN_LFLAGS = $(LFLAGS)
