Fixed check-in caused by previous commit in which making depend without first creating the platform/thread/comm subdirectory caused the make to break.  Fixed this by hoisting the name of that variable into the .head file and adding it as a prerequisite for executing a make depend step.
git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@11584 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/runtime/make/Makefile.runtime.head
+++ b/runtime/make/Makefile.runtime.head
@@ -20,6 +20,10 @@ include $(CHAPEL_ROOT)/make/Makefile.base
 INCL_CFLAGS = -I. -I$(RUNTIME_ROOT)/include/threads-$(CHPL_THREADS) -I$(RUNTIME_ROOT)/include/comm-$(CHPL_COMM) -I$(RUNTIME_ROOT)/include/$(CHPL_MAKE_PLATFORM) -I$(RUNTIME_ROOT)/include
 RUNTIME_CFLAGS += $(INCL_CFLAGS)
 
+RUNTIME_OBJ_DIR = ./$(CHPL_MAKE_PLATFORM)/threads-$(CHPL_THREADS)/comm-$(CHPL_COMM)
+RUNTIME_OBJ_DIR_SAFESLASH = $(subst /,\\/, $(RUNTIME_OBJ_DIR))
+RUNTIME_OBJ_DIR_STAMP = $(RUNTIME_OBJ_DIR)/.timestamp
+
 
 #
 # clean and clobber targets
