--- a/runtime/make/Makefile.runtime.rules
+++ b/runtime/make/Makefile.runtime.rules
@@ -1,7 +1,7 @@
 
 include $(RUNTIME_ROOT)/make/Makefile.runtime.commonrules
 
-depend: $(DEPENDSUBDIRS) $(DEPEND_DEPS) echoruntimedir
+depend: $(DEPENDSUBDIRS) echoruntimedir $(DEPEND_DEPS)
 	@echo Updating dependences...
 
 CVS_DEPS= $(CVS_SRCS:%.c=%.depend)
