--- a/compiler/make/Makefile.compiler.foot
+++ b/compiler/make/Makefile.compiler.foot
@@ -34,7 +34,7 @@ echocompilerdir:
 #
 
 %.depend: %.cpp $(PLATFORM_DIR)
-	@$(MAKEDEPEND) -MT '$(CHPL_MAKE_PLATFORM)/$*.o' $(COMP_CFLAGS) $< | grep -v \^\# >> $(CVS_DEPENDS).tmp
+	@$(MAKEDEPEND) $(COMP_CFLAGS) $< | sed s/$*\\\.o/\\\$(PLATFORM_DIR_SAFESLASH)\\\/$*\\\.o/ >> $(CVS_DEPENDS).tmp
 
 $(CHPL_MAKE_PLATFORM)/%.o: %.cpp $(PLATFORM_DIR)
 	$(CXX) -c $(COMP_CXXFLAGS) -o $@ $<
