Updated the MTA Makefile to use c++ as the C++ compiler and to use the -w flag on yacc/flex-generated code to suppress warnings that we can't control.
git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@11618 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/make/Makefile.mta
+++ b/make/Makefile.mta
@@ -7,7 +7,7 @@
 #
 
 CC = cc
-CXX = cc
+CXX = c++
 MAKEDEPEND = c++ -M
 CMAKEDEPEND = cc -M
 
@@ -27,3 +27,4 @@ COMP_CFLAGS = $(CFLAGS)
 RUNTIME_CFLAGS = $(CFLAGS)
 GEN_CFLAGS = $(CFLAGS) -WS 189
 
+COMP_CFLAGS_NONCHPL = -w
