Added a test for UTS.  It will make all of the versions and run them on a small ~10000 node tree.  Added a testMode flag to supress outputting of timing/threads info.
git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@11626 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/test/studies/uts/Makefile
+++ b/test/studies/uts/Makefile
@@ -1,21 +1,30 @@
-CC     = chpl
-CFLAGS = -O --no-bounds-checks
+CHPL     = chpl
+CFLAGS   = -O --no-bounds-checks
+
+TESTTREE = -sdistrib=Geometric -sgeoDist=GeoFixed -sSEED=19 -sB_0=4 -sMAX_DEPTH=5
 
 TARGETS= uts-rec uts-rec-seq uts-deq uts-deq-seq
 
 all: $(TARGETS)
 
 uts-rec: uts_rec.chpl sha1_rng.chpl brg_sha1.c brg_sha1.h
-	$(CC) $(CFLAGS) -o $@ -sparallel=true $+
+	$(CHPL) $(CFLAGS) -o $@ -sparallel=true $+
 
 uts-rec-seq: uts_rec.chpl sha1_rng.chpl brg_sha1.c brg_sha1.h
-	$(CC) $(CFLAGS) -o $@ --serial -sparallel=false $+
+	$(CHPL) $(CFLAGS) -o $@ --serial -sparallel=false $+
 
 uts-deq: uts_deq.chpl sha1_rng.chpl dequeue.chpl brg_sha1.c brg_sha1.h
-	$(CC) $(CFLAGS) -o $@ $+
+	$(CHPL) $(CFLAGS) -o $@ $+
 
 uts-deq-seq: uts_deq.chpl sha1_rng.chpl dequeue.chpl brg_sha1.c brg_sha1.h
-	$(CC) $(CFLAGS) -o $@ -sparallel=false --serial $+
+	$(CHPL) $(CFLAGS) -o $@ -sparallel=false --serial $+
+
+test:
+	@make CHPL=$(CHPL) all > /dev/null
+	./uts-rec -stestMode=true $(TESTTREE)
+	./uts-rec-seq -stestMode=true $(TESTTREE)
+	./uts-deq -stestMode=true $(TESTTREE)
+	./uts-deq-seq -stestMode=true $(TESTTREE)
 
 clean:
 	rm -f $(TARGETS)
