Final changes to the sudoku and UTS make tests.
git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@11646 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/test/studies/sudoku/dinan/Makefile
+++ b/test/studies/sudoku/dinan/Makefile
@@ -1,7 +1,6 @@
-CHPL=chpl
-CHPLFLAGS=-O --no-bounds-checks
+CHPL      = chpl
+CHPLFLAGS = -O --no-bounds-checks
 
-MAKEFLAGS = --no-print-directory
 TARGETS   = sudoku sudoku-smart sudoku-simple
 
 all: $(TARGETS)
@@ -15,7 +14,8 @@ sudoku-smart: sudoku-smart.chpl
 sudoku-simple: sudoku-simple.chpl
 	$(CHPL) $(CHPLFLAGS) -o $@ $+
 
-test: all
+test:
+	@make CHPL=$(CHPL) > /dev/null
 	./sudoku-simple easy.dat
 
 clean:
