--- a/test/studies/uts/Makefile
+++ b/test/studies/uts/Makefile
@@ -1,23 +1,23 @@
 CHPL     = chpl
-CFLAGS   = -O --no-bounds-checks
+CHPLFLAGS= -O --no-bounds-checks
 
 TESTTREE = -sdistrib=Geometric -sgeoDist=GeoFixed -sSEED=19 -sB_0=4 -sMAX_DEPTH=5
 
-TARGETS= uts-rec uts-rec-seq uts-deq uts-deq-seq
+TARGETS  = uts-rec uts-rec-seq uts-deq uts-deq-seq
 
 all: $(TARGETS)
 
 uts-rec: uts_rec.chpl sha1_rng.chpl brg_sha1.c brg_sha1.h
-	$(CHPL) $(CFLAGS) -o $@ -sparallel=true $+
+	$(CHPL) $(CHPLFLAGS) -o $@ -sparallel=true $+
 
 uts-rec-seq: uts_rec.chpl sha1_rng.chpl brg_sha1.c brg_sha1.h
-	$(CHPL) $(CFLAGS) -o $@ --serial -sparallel=false $+
+	$(CHPL) $(CHPLFLAGS) -o $@ --serial -sparallel=false $+
 
 uts-deq: uts_deq.chpl sha1_rng.chpl dequeue.chpl brg_sha1.c brg_sha1.h
-	$(CHPL) $(CFLAGS) -o $@ $+
+	$(CHPL) $(CHPLFLAGS) -o $@ $+
 
 uts-deq-seq: uts_deq.chpl sha1_rng.chpl dequeue.chpl brg_sha1.c brg_sha1.h
-	$(CHPL) $(CFLAGS) -o $@ -sparallel=false --serial $+
+	$(CHPL) $(CHPLFLAGS) -o $@ -sparallel=false --serial $+
 
 test:
 	@make CHPL=$(CHPL) all > /dev/null
