Add a new option "-launchcmd cmd" to the start_test script. The command given is prepended to the executable command line when tests are executed. This allows for example to execute tests compiled for X1 in apsim, the X1 and BW simulator, or in cross-compile cases to use a script to copy the binary to the target machine and execute there.
git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@11660 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/make/Makefile.x1
+++ b/make/Makefile.x1
@@ -25,6 +25,6 @@ OPT_CFLAGS =
 CFLAGS = -hcpu=cray-x1 -hgnu
 
 COMP_CFLAGS = $(CFLAGS)
-RUNTIME_CFLAGS = $(CFLAGS) -DNO_BYTES_PER_LOCALE
+RUNTIME_CFLAGS = $(CFLAGS) -DNO_BYTES_PER_LOCALE -DNO_CORES_PER_LOCALE
 GEN_CFLAGS = $(CFLAGS)
 
