Modified Jim's Makefile-driven tests to use $(MAKE) rather than make on his recursive invocations of make.
git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@11689 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/test/studies/madness/dinan/mad_chapel/Makefile
+++ b/test/studies/madness/dinan/mad_chapel/Makefile
@@ -24,6 +24,7 @@ TARGETS= test_diff       \
 
 all: $(TARGETS)
 
+FORCE:
 
 test_diff: $(SOURCES) test_diff.chpl MadAnalytics.chpl
 	$(CHPL) $(CFLAGS) --main-module $@ -o $@ $+
@@ -45,7 +46,7 @@ test_showboxes: $(SOURCES) test_showboxes.chpl MadAnalytics.chpl
 	$(CHPL) $(CFLAGS) --main-module $@ -o $@ $+
 
 test:
-	@make CHPL="$(CHPL)" CFLAGS="$(TESTFLAGS)" all > /dev/null 2>&1
+	@$(MAKE) CHPL="$(CHPL)" CFLAGS="$(TESTFLAGS)" all > /dev/null 2>&1
 	./test_diff
 	./test_gaxpy
 	./test_mul
