Added "-nl 1" options to all of the new Makefile-driven tests so that they run on GASNet and also run on non-parallel runs.  Added this option to their .good files as well, which are written to echo the command that executes the program (could also turn this off if one wanted).
git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@11711 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/test/studies/sudoku/dinan/Makefile
+++ b/test/studies/sudoku/dinan/Makefile
@@ -16,7 +16,7 @@ sudoku-simple: sudoku-simple.chpl
 
 test:
 	@$(MAKE) CHPL=$(CHPL) > /dev/null
-	./sudoku-simple easy.dat
+	./sudoku-simple -nl 1 easy.dat
 
 clean:
 	rm -f $(TARGETS)
