--- a/runtime/make/Makefile.runtime.head
+++ b/runtime/make/Makefile.runtime.head
@@ -15,6 +15,10 @@ endif
 CHAPEL_ROOT = $(RUNTIME_ROOT)/..
 CHAPEL_SUBDIR = runtime/$(RUNTIME_SUBDIR)
 
+ifdef CHPL_TARGET_PLATFORM
+CHPL_MAKE_PLATFORM = $(CHPL_TARGET_PLATFORM)
+endif
+
 include $(CHAPEL_ROOT)/make/Makefile.base
 
 INCL_CFLAGS = -I. -I$(RUNTIME_ROOT)/include/threads-$(CHPL_THREADS) -I$(RUNTIME_ROOT)/include/comm-$(CHPL_COMM) -I$(RUNTIME_ROOT)/include/$(CHPL_MAKE_PLATFORM) -I$(RUNTIME_ROOT)/include
