Added a truncate() function that truncates values below machine precision to 0. Also added a truncateAtEps param to turn this on/off at compile time (default is off, but it is turned on when you 'make test').  Truncate() is called from evalNPT() and summarize() in MRA.chpl to avoid printing values that are below precision.
git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@11801 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/test/studies/madness/dinan/mad_chapel/Makefile
+++ b/test/studies/madness/dinan/mad_chapel/Makefile
@@ -6,7 +6,7 @@ CFLAGS  = --instantiate-max 512 --print-passes
 #CFLAGS += --CHPLflags "-Wall"
 #CFLAGS += --no-cg-cpp-lines
 
-TESTFLAGS = --instantiate-max 512
+TESTFLAGS = --instantiate-max 512 -struncateAtEps=true
 
 SOURCES= AnalyticFcn.chpl  \
          FTree.chpl        \
