Updated the C99 typedefs in brg_types.h
git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@11868 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/test/studies/uts/Makefile
+++ b/test/studies/uts/Makefile
@@ -1,5 +1,5 @@
 CHPL     = chpl
-CHPLFLAGS= -O --no-bounds-checks --ccflags -DBRG_STD_TYPES
+CHPLFLAGS= -O --no-bounds-checks --ccflags -DBRG_C99_TYPES
 
 TESTTREE = -sdistrib=Geometric -sgeoDist=GeoFixed -sSEED=19 -sB_0=4 -sMAX_DEPTH=5
 
