Fixed a subtle Makefile problem for the madness tests running on the xt-cnl in gnu mode (and possibly the others, I didn't check).  It seems that when our Makefile defines CFLAGS, these flags are passed on to the back-end C compiler.  In these Makefiles, CFLAGS was being used to define chpl flags, so the back-end C compiler would choke on them, not recognizing them.
Not sure if this is a bug or a feature in the xt
compilers, but worked around it by naming this
variable CHPL_FLAGS, which is a better name anyway.

Also fixed, a typo that crept into a commented out
section of this file in a previous check-in.


git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@11890 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/test/studies/madness/marybeth/Makefile
+++ b/test/studies/madness/marybeth/Makefile
@@ -1,10 +1,10 @@
 GENC   = gen_c
 
 CHPL    = chpl
-CFLAGS  = --instantiate-max 512 --print-passes
-#CFLAGS += -g --savec=$(GENC) --short-names
-#CFLAGS += --CHPLflags "-Wall"
-#CFLAGS += --no-cg-cpp-lines
+CHPL_FLAGS  = --instantiate-max 512 --print-passes
+#CHPL_FLAGS += -g --savec=$(GENC) --short-names
+#CHPL_FLAGS += --ccflags "-Wall"
+#CHPL_FLAGS += --no-cg-cpp-lines
 
 TESTFLAGS = --instantiate-max 512
 
@@ -27,26 +27,26 @@ all: $(TARGETS)
 FORCE:
 
 test_diff: $(SOURCES) test_diff.chpl MadAnalytics.chpl
-	$(CHPL) $(CFLAGS) --main-module $@ -o $@ $+
+	$(CHPL) $(CHPL_FLAGS) --main-module $@ -o $@ $+
 
 
 test_gaxpy: $(SOURCES) test_gaxpy.chpl MadAnalytics.chpl
-	$(CHPL) $(CFLAGS) --main-module $@ -o $@ $+
+	$(CHPL) $(CHPL_FLAGS) --main-module $@ -o $@ $+
 
 
 test_mul: $(SOURCES) test_mul.chpl MadAnalytics.chpl
-	$(CHPL) $(CFLAGS) --main-module $@ -o $@ $+
+	$(CHPL) $(CHPL_FLAGS) --main-module $@ -o $@ $+
 
 
 test_likepy: $(SOURCES) test_likepy.chpl MadAnalytics.chpl
-	$(CHPL) $(CFLAGS) --main-module $@ -o $@ $+
+	$(CHPL) $(CHPL_FLAGS) --main-module $@ -o $@ $+
 
 
 test_showboxes: $(SOURCES) test_showboxes.chpl MadAnalytics.chpl
-	$(CHPL) $(CFLAGS) --main-module $@ -o $@ $+
+	$(CHPL) $(CHPL_FLAGS) --main-module $@ -o $@ $+
 
 test:
-	@$(MAKE) CHPL="$(CHPL)" CFLAGS="$(TESTFLAGS)" all > /dev/null 2>&1
+	@$(MAKE) CHPL="$(CHPL)" CHPL_FLAGS="$(TESTFLAGS)" all > /dev/null 2>&1
 	./test_diff -nl 1
 	./test_gaxpy -nl 1
 	./test_mul -nl 1
